<resources>
    <string name="app_name">Animations</string>
    <string name="view_property_animations">view property animations</string>
    <string name="object_animations">object animations</string>
    <string name="reset">reset</string>
    <string name="translation">translation</string>
    <string name="scale">scale</string>
    <string name="rotation">rotation</string>
    <string name="alpha">alpha</string>
    <string name="alpha_header">A:</string>
    <string name="red">R:</string>
    <string name="blue">B:</string>
    <string name="green">G:</string>
</resources>
